# sam-3d-objects

./: .gitignore  justfile  pyproject.toml
doc/: setup.md
notebook/: demo_single_object.ipynb  inference.py
sam3d_objects/model/backbone/tdfy_dit/representations/mesh/flexicubes/: flexicubes.py
