[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sam3d_objects"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
  "MoGe @ git+https://github.com/microsoft/MoGe.git@a8c37341bc0325ca99b9d57981cc3bb2bd3e255b",
  "Werkzeug",
  "astor",
  "async-timeout",
  "av",
  "bpy",
  "colorama",
  "crcmod",
  "cuda-python",
  "decord",
  "deprecation",
  "easydict",
  "einops-exts",
  "exceptiongroup",
  "fastavro",
  "fasteners",
  "Flask",
  "fqdn",
  "ftfy",
  "fvcore",
  "gdown",
  "h5py",
  "hdfs",
  "httplib2",
  "hydra-core",
  "hydra-submitit-launcher",
  "igraph",
  "imath",
  "isoduration",
  "jsonlines",
  "jsonpickle",
  "jsonpointer",
  "jupyter",
  "librosa",
  "lightning",
  "loguru",
  "nvidia-cuda-nvcc-cu12",
  "nvidia-cuda-runtime-cu12",
  "nvidia-pyindex",
  "objsize",
  "open3d",
  "opencv-python",
  "OpenEXR",
  "optimum",
  "optree",
  "orjson",
  "panda3d-gltf",
  "peft",
  "pip-system-certs",
  "point-cloud-utils",
  "polyscope",
  "pycocotools",
  "pydot",
  "pymeshfix",
  "pymongo",
  "pyrender",
  "PySocks",
  "python-pycg",
  "randomname",
  "roma",
  "rootutils",
  "Rtree",
  "simplejson",
  "smplx",
  "spconv-cu121",
  "tensorboard",
  "torch",
  "timm",
  "tomli",
  "torchaudio",
  "uri-template",
  "wandb",
  "webcolors",
  "webdataset",
  "xatlas",
  "xformers",
]

[project.optional-dependencies]
inference = [
  "gradio",
  "gsplat @ git+https://github.com/nerfstudio-project/gsplat.git@2323de5905d5e90e035f792fe65bad0fedd413e7",
  "pytorch3d @ git+https://github.com/facebookresearch/pytorch3d.git@75ebeeaea0908c5527e7b1e305fbc7681382db47",
  "flash-attn",
  "seaborn",
]

[tool.hatch.build]
ignore-vcs = true
include = ["**/*.py"]
exclude = ["conftest.py", "*_test.py"]
packages = ["sam3d_objects"]

[tool.hatch.metadata]
allow-direct-references = true
